# homeWorksCppL

./: README.md
lesson_1/lambda_func/: lambda_func.sln  lambda_func.vcxproj  main.cpp
lesson_1/operations_on_corners/: operations_on_corners.cpp  operations_on_corners.sln  operations_on_corners.vcxproj  operations_on_corners.vcxproj.filters
lesson_1/std_variant/: main.cpp  std_variant.sln  std_variant.vcxproj
lesson_2/error_in_program/: error_in_program.cpp  error_in_program.sln  error_in_program.vcxproj  error_in_program.vcxproj.filters
lesson_3/copying_smart_arrays/: SmartArray.cpp  SmartArray.h  copying_smart_arrays.sln  copying_smart_arrays.vcxproj  copying_smart_arrays.vcxproj.filters  main.cpp
lesson_3/smart_array/: SmartArray.cpp  SmartArray.h  main.cpp  smart_array.cpp  smart_array.sln  smart_array.vcxproj  smart_array.vcxproj.filters
lesson_4/list_test/: CMakeLists.txt  list_test.cpp  list_test.sln  list_test.vcxproj  list_test.vcxproj.filters
lesson_4/test_add_and_remov_items/: CMakeLists.txt  main_test.cpp  test_add_and_remov_items.cpp  test_add_and_remov_items.sln  test_add_and_remov_items.vcxproj  test_add_and_remov_items.vcxproj.filters
lesson_4/test_list/: main_test.cpp
lesson_4/test_metod/: CMakeLists.txt  List.cpp  List.h  main.cpp  main_test.cpp
lesson_5/functor/: functor.sln  functor.vcxproj  main.cpp
lesson_5/table/: table.cpp  table.sln  table.vcxproj
lesson_5/template_sqr/: template_sqr.cpp  template_sqr.sln  template_sqr.vcxproj  template_sqr.vcxproj.filters
lesson_6/my_vector/: my_vector.cpp  (+2 more)
parser_ini/: parser_ini.sln
(+40 files in other folders)
